# SwapBack

./: .env.devnet  .env.devnet.template  .env.example  .eslintignore  .eslintrc.json  .git-hooks-guide.md  .gitattributes  .gitignore  .prettierignore  .vercel-redeploy  .vercelignore  ACTIONS_CORRECTIVES_25NOV2025.md  ACTIONS_ENGAGEES_RESUME.md  ACTION_IMMEDIAT_OCT25.md  ACTION_PLAN_IMMEDIATE.md  ACTION_REQUIRED_REDEPLOY.md  AGENTS.md  ALTERNATIVE_BUILD.md  ANALYSE_COMPLETE.md  ANALYSE_DEVELOPPEMENT_2025.md  ANALYSE_FONCTIONNALITES_AVANCEES.md  ANALYSE_RAPIDE_OCT2025.md  ANALYTICS_TELEMETRY_CHECKLIST.md  ANCHOR_BUILD_STATUS.md  APPLICATION_RUNNING_VERIFIED.md  APPLICATION_WORKING.md  APP_STATUS_VERIFICATION.md  AUDIT_ROUTEUR_SWAP_28OCT2025.md  Anchor.toml  Anchor.toml.backup  Anchor.toml.backup-20251115-124714  Anchor.toml.backup-20251115-124807  Anchor.toml.backup-20251115-130707  Anchor.toml.test  BACKEND_RUST_INTEGRATION_GUIDE.md  BACK_TOKEN_SETUP_GUIDE.md  BOOST_COMPLETE.md  BOOST_IMPLEMENTATION_COMPLETE.md  BOOST_SYSTEM_DEPLOYMENT_GUIDE.md  BOOST_SYSTEM_UI_UPDATE.md  (+619 more)
.cargo/: config.toml
.devcontainer/: QUICK_COMMANDS.sh  TROUBLESHOOTING.md  devcontainer.json  disable-heavy-extensions.sh  fix-connection.sh  fix-disconnect-complete.sh  keepalive-enhanced.sh  keepalive.sh  monitor-stability.sh  network-diagnostic.sh  optimize-cpu.sh
.excluded_programs/swapback_router/: Cargo.toml
.excluded_programs/swapback_router/src/: lib.rs
.excluded_programs/swapback_transfer_hook/: Cargo.toml
.github/: copilot-instructions.md  dependabot.yml
.husky/: pre-commit
app/: .dockerignore  .env.example  .env.preview.template  .env.production.mainnet  .env.production.pulled  .env.production.template  .env.testnet  .env.vercel.test  .eslintignore  .gitignore  .vercelignore  DEPLOIEMENT_VERCEL.md  Dockerfile  VERCEL_ENV_VARIABLES.md  build.sh  deploy-vercel.sh  fly.toml  force-vercel-redeploy.md  next.config.mjs  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  test-unlock-production.sh  tsconfig.json  tsconfig.tsbuildinfo  update-vercel-env.sh  vercel.json  vercel.json.backup  vitest.config.ts
audit/: README.md
audit-package/: README.md
backups/: README_SECURITY.md
browser-extension/: DEPLOYMENT.md  background.js  content.js  popup.html  popup.js  route-optimizer.js  test-page.html
buyback-deployment-package/: INFO.txt  README.md  quick-deploy.sh
client/: Cargo.toml
client/src/: lib.rs  main.rs  optimizer.rs  oracle.rs  types.rs
docs/: ANALYTICS_ROLLOUT_PLAN.md  API_REFERENCE.md  ARCHITECTURE_COMPLETE.md  BETA_EMAIL_TEMPLATES.md  BETA_PROGRAM.md  BETA_TESTING_PROGRAM.md  BLOCKCHAIN_TRACEABILITY.md  BUILD.md  CI_CD_SETUP.md  CPI_ACCOUNTS.md  DCA.md  DCA_UI_OVERVIEW.md  DEPLOYMENT.md  EXAMPLES.md  FEATURE_BLOCKCHAIN_TRACEABILITY.md  FRONTEND_JUPITER_INTEGRATION.md  GITHUB_SECRETS_SETUP.md  KEEPER.md  LOCK_UNLOCK_INTEGRATION.md  NEXT_ACTIONS.md  ON_CHAIN_HISTORY.md  ON_CHAIN_HISTORY_IMPROVEMENTS.md  ON_CHAIN_HISTORY_QUICKSTART.md  ON_CHAIN_HISTORY_README.md  PHASE_10_PROGRESS.md  PHASE_6.1_COMPLETE.md  PHASE_6.2_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_7_FINAL_REPORT.md  PHASE_7_PROGRESS.md  PHASE_7_SUMMARY.md  PHASE_8_COMPLETE.md  PHASE_8_SUMMARY.md  PHASE_9_COMPLETE.md  PHASE_9_COVERAGE_ANALYSIS.md  PHASE_9_RESULTS.md  QUICK_DEPLOY_LOCK_UNLOCK.md  ROUTE_PERFORMANCE_ANALYSIS.md  ROUTING.md  (+13 more)
logs/: .gitignore  README.md  conversation-2025-12-12.txt
oracle/: .env.flyio.production  Dockerfile  package.json  test-server.js  tsconfig.json
patches/: bigint-buffer+1.1.5.patch
programs/common_swap/: Cargo.toml
programs/common_swap/src/: lib.rs
programs/swapback_buyback/: Cargo.toml
programs/swapback_buyback/src/: lib.rs  lib.rs.broken  pyth.rs
programs/swapback_cnft/: Cargo.toml
programs/swapback_cnft/fuzz/: Cargo.toml
programs/swapback_cnft/fuzz/fuzz_targets/: fuzz_boost.rs  fuzz_lock_duration.rs
programs/swapback_cnft/src/: lib.rs  lib_old.rs  lib_simple.rs
programs/swapback_router/: Cargo.toml
programs/swapback_router/fuzz/: Cargo.toml  README.md
programs/swapback_router/fuzz/fuzz_targets/: fuzz_buyback_flow.rs  fuzz_oracle_price.rs  fuzz_swap_amounts.rs
programs/swapback_router/proptest-regressions/: proptest_fuzz.txt
programs/swapback_router/src/: cpi_jupiter.rs  cpi_lifinity.rs  cpi_meteora.rs  cpi_orca.rs  cpi_phoenix.rs  cpi_raydium.rs  cpi_raydium_clmm.rs  cpi_saber.rs  cpi_sanctum.rs  error.rs  getrandom_stub.rs  lib.rs  logging.rs  math.rs  oracle.rs  oracle_cache.rs  oracle_v2.rs  proptest_fuzz.rs  routing.rs  slippage.rs  switchboard.rs  tests.rs  venue_scoring.rs
programs/swapback_router/src/instructions/: cancel_dca_plan.rs  create_dca_plan.rs  execute_dca_swap.rs  mod.rs  pause_dca_plan.rs  resume_dca_plan.rs
programs/swapback_router/src/state/: dca_plan.rs  mod.rs  router_config.rs  router_state.rs
programs/swapback_router/tests/: dca_plan.rs  fee_calculations.rs  fuzz_calculations.rs  integration_swap.rs  oracle_fallback.rs  venue_scoring.rs
programs/swapback_transfer_hook/: Cargo.toml
programs/swapback_transfer_hook/src/: lib.rs
scripts/: 1-clean-environment.sh  2-install-toolchain.sh  3-build-program.sh  4-deploy-devnet.sh  4-fresh-program-deploy.sh  5-deploy-with-agave.sh  E2E_TESTS_README.md  TEST_EARLY_UNLOCK.md  analyze-jupiter-account-order.ts  analyze-router-state.js  audit-security.sh  benchmark-router.sh  benchmark-router.ts  beta-status.sh  build-and-deploy.sh  build-workaround.sh  build.sh  calculate-pdas-rent.ts  capture-bn-error.ts  capture-swap-debug.ts  check-back-balance.js  check-back-extensions.js  check-back-token-type.js  check-both-mints.js  check-mint-addresses.js  clean-code-patches.sh  clean-everything.sh  clean_rebuild_env.sh  close-corrupted-usernft.js  close-globalstate.js  compare-mint-addresses.sh  compare-realtime.sh  compare-swapback-vs-jupiter.ts  configure-mainnet-router.ts  configure-mainnet-simple.js  configure-router-mainnet.js  create-back-token-account.sh  create-back-token.sh  create-buyback-ata.js  create-merkle-tree.js  (+159 more)
sdk/: README.md  (+4 more)
(+724 files in other folders)
