[workspace]
members = [
    "programs/swapback_cnft",
    "programs/swapback_router",
    "programs/swapback_transfer_hook",
]
exclude = [
    "programs/swapback_buyback",
    "programs/common_swap",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.32.1"
anchor-spl = "=0.30.1"
solana-program = "=1.18.26"
solana-sdk = "=1.18.26"

# Contraintes pour compatibilité Rust 1.75 (Solana platform-tools v1.41)
borsh = "=0.10.3"
proc-macro-crate = "=1.3.1"
indexmap = "=2.6.0"
toml_edit = "=0.20.2"
toml_datetime = "=0.6.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
