[workspace]
members = [
    "programs/swapback_cnft",
    "programs/swapback_router",
    "programs/swapback_buyback",
    "programs/common_swap",
]
exclude = [
    "programs/swapback_transfer_hook",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
solana-program = "=1.18.26"
solana-sdk = "=1.18.26"

# Contraintes pour compatibilité Solana BPF toolchain (Rust 1.75)
borsh = "=0.10.3"
proc-macro-crate = "=1.3.1"
indexmap = "=2.6.0"
toml_edit = "=0.22.22"
toml_datetime = "=0.6.11"

[patch.crates-io]
# Use a local copy of proc-macro-crate whose Cargo.toml pins toml_edit to
# 0.22.x so the transitive toml_datetime stays compatible with rustc 1.75.
proc-macro-crate = { path = "patches/proc-macro-crate" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
