[package]
name = "swapback-client"
version = "0.1.0"
edition = "2021"
description = "Off-chain optimization client for SwapBack DEX Router"

[[bin]]
name = "swapback-client"
path = "src/main.rs"

[dependencies]
# Solana dependencies
solana-client = "=1.18.22"
solana-sdk = { workspace = true }
solana-program = { workspace = true }

# Pyth oracle - DÉSACTIVÉ pour éviter conflit versions
# pyth-sdk-solana = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"