[package]
name = "swapback_router"
version = "0.1.0"
description = "Programme principal de routage SwapBack pour optimisation de swaps"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
spl-token-2022 = "8.0.1"

[workspace]
