[package]
name = "common_swap"
version = "0.1.0"
description = "Common swap program with weight-based routing and MEV protection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "common_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "~1.16"