[package]
name = "common_swap"
version = "0.1.0"
description = "Programme de swap commun avec routage pondéré et protection MEV"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "common_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }