[package]
name = "swapback_buyback"
version = "0.1.0"
description = "Programme de buyback et burn pour le token $BACK"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_buyback"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
