[package]
name = "swapback_cnft"
version = "0.1.0"
description = "Programme de gestion des compressed NFTs pour les niveaux SwapBack"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_cnft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }