[package]
name = "swapback_router"
version = "0.1.0"
description = "Programme de routage de swap avancé avec oracle et TWAP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
devnet = []
switchboard = ["switchboard-solana"]
pyth = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
pyth-sdk-solana = "=0.10.0"
solana-program = { workspace = true }
solana-sdk = { workspace = true }
switchboard-solana = { version = "0.30.4", optional = true }
solana-pubkey = { version = "2.4.0", default-features = false }
