[package]
name = "swapback_router"
version = "0.1.0"
description = "Programme de routage de swap avancé avec oracle et TWAP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
default = []
devnet = []
# switchboard = ["switchboard-solana"]
pyth = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
# Switchboard: Désactivé jusqu'à version compatible disponible
# switchboard-solana = { version = "0.29.0", optional = true }

# getrandom avec custom feature pour BPF
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
