[package]
name = "swapback_transfer_hook"
version = "0.1.0"
description = "Transfer Hook program for $BACK token - automatic burn mechanism"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022"] }
spl-transfer-hook-interface = "0.6.0"
spl-tlv-account-resolution = "0.6.0"
spl-type-length-value = "0.4.0"