[package]
name = "swapback_transfer_hook"
version = "0.1.0"
description = "Transfer Hook program for $BACK token - automatic burn mechanism"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token_2022"] }
spl-transfer-hook-interface = "0.7.0"
spl-tlv-account-resolution = "0.7.0"
spl-type-length-value = "0.5.0"