[package]
name = "swapback-transfer-hook"
version = "0.1.0"
description = "Transfer Hook for $BACK token - Triggers automatic buyback on transfers"
edition = "2021"

[workspace]
# Empty workspace to prevent inheriting from root workspace

[lib]
crate-type = ["cdylib", "lib"]
name = "swapback_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
solana-program = "=1.18.22"
spl-token-2022 = "4.0.0"
spl-transfer-hook-interface = "0.6.1"
spl-tlv-account-resolution = "0.6.1"
# TODO #10: Fix version conflicts with spl-pod (requires Solana 2.0 upgrade)
